--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,10 @@
     "class-validator": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.1.0",
+    "koa-static-cache": "^5.1.4",
     "koa-ts-controllers": "^2.1.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5",
@@ -35,6 +37,7 @@
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
+    "@types/koa-static-cache": "^5.1.0",
     "@types/node": "^14.0.14",
     "sequelize-cli": "^6.2.0",
     "ts-node-dev": "^1.0.0-pre.50",
